# flight_sim

./: .clang-format
lib/: README.md  meson.build
lib/include/: PID.h  rocket.h  rocketlib.h  utils.h
lib/src/: PID.c  fparser.c  logger.c  rocket.c  utils.c
rocketlib/: README.md  meson.build
rocketlib/include/: display.h  rocketlib.h
rocketlib/include/rocketlib/: PID.h  events.h  fparser.h  logger.h  rocket.h  simulator.h  utils.h
rocketlib/src/: PID.c  fparser.c  logger.c  rocket.c  utils.c
simulations/vertical_fall/: README.md  meson.build  stats.py
simulations/vertical_fall/include/: common.h
simulations/vertical_fall/src/: common.c  hoverslam.c  pid.c
